--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dwolla-v2": "^3.4.0",
     "lucide-react": "^0.483.0",
     "next": "^14.2.3",
     "node-appwrite": "^15.0.1",
+    "plaid": "^31.1.0",
     "postcss": "^8.0.0",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
@@ -27,6 +29,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-plaid-link": "^3.6.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
